@@ -5,10 +5,14 @@ import snackscription.subscriptionadmin.repository.AdminRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import snackscription.subscriptionadmin.dto.AdminDTO;
+import org.springframework.scheduling.annotation.Async;
 
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 import snackscription.subscriptionadmin.dto.DTOMapper;
+
 
 @Service
 public class AdminServiceImpl implements AdminService{
@@ -17,54 +21,60 @@ public class AdminServiceImpl implements AdminService{
     private AdminRepository adminRepository;
 
     @Override
-    public AdminSubscription create(AdminDTO adminDTO) {
+    @Async
+    public CompletableFuture<AdminSubscription> create(AdminDTO adminDTO) {
         AdminSubscription adminSubscription = DTOMapper.convertDTOtoModel(adminDTO);
-        return adminRepository.create(adminSubscription);
+        return CompletableFuture.completedFuture(adminRepository.create(adminSubscription));
     }
 
     @Override
-    public List<AdminDTO> findAll() {
-        return adminRepository.findAll()
-                .stream()
+    @Async
+    public CompletableFuture<List<AdminDTO>> findAll() {
+        List<AdminSubscription> adminSubscriptions = adminRepository.findAll();
+        List<AdminDTO> adminDtos = adminSubscriptions.stream()
                 .map(DTOMapper::convertModelToDto)
-                .toList();
+                .collect(Collectors.toList());
+        return CompletableFuture.completedFuture(adminDtos);
     }
 
     @Override
-    public AdminDTO findById(String subscriptionId) {
+    @Async
+    public CompletableFuture<AdminDTO> findById(String subscriptionId) {
         if(subscriptionId == null || subscriptionId.isBlank()){
             throw new IllegalArgumentException("ID cannot be null or empty");
         }
 
-        AdminSubscription adminSubscription = adminRepository.findById(subscriptionId)
+        return adminRepository.findById(subscriptionId)
+                .map(DTOMapper::convertModelToDto)
+                .map(CompletableFuture::completedFuture)
                 .orElseThrow(() -> new IllegalArgumentException("Subscription not found"));
-
-        return DTOMapper.convertModelToDto(adminSubscription);
     }
 
     @Override
-    public AdminSubscription update(AdminDTO adminDTO) {
+    @Async
+    public CompletableFuture<AdminSubscription> update(AdminDTO adminDTO) {
         if(adminDTO == null) {
             throw new IllegalArgumentException("AdminDTO cannot be null");
         }
 
-        AdminSubscription adminSubscription = adminRepository.findById(adminDTO.getSubscriptionId())
-                .orElseThrow(() -> new IllegalArgumentException("Subscription not found"));
-
-        DTOMapper.updateAdminSubscription(adminSubscription, adminDTO);
-        return adminRepository.update(adminSubscription);
+        return adminRepository.findById(adminDTO.getSubscriptionId()).
+                map(adminSubscription -> {
+                    DTOMapper.updateAdminSubscription(adminSubscription, adminDTO);
+                    return CompletableFuture.completedFuture(adminRepository.update(adminSubscription));
+                }).orElseThrow(() -> new IllegalArgumentException("Subscription not found"));
     }
 
     @Override
-    public void delete(String subscriptionId) {
+    @Async
+    public CompletableFuture<Void> delete(String subscriptionId) {
         if(subscriptionId == null || subscriptionId.isBlank()){
             throw new IllegalArgumentException("ID cannot be null or empty");
         }
 
-        if(adminRepository.findById(subscriptionId).isEmpty()){
+        if (adminRepository.findById(subscriptionId).isEmpty()) {
             throw new IllegalArgumentException("Subscription not found");
         }
-
         adminRepository.delete(subscriptionId);
+        return CompletableFuture.completedFuture(null);
     }
 }
